--- a/index.html
+++ b/index.html
@@ -7,17 +7,13 @@
   </head>
   <body>
 
-    <div class='box border rounded soft'>
-        <div class='box-child'>
-          <span>Text</span>
-          <span>Text</span>
-          <span>Text</span>
-        </div>
+    <div class='box'>
+      <div class='minibox'>
+        <div style="width:400px"> Text </div>
+        <div style="width:400px"> Text </div>
+        <div style="width:800px"> Text </div>
         <div> Text </div>
-        <span> Text </span>
-        <div> Text </div>
-        <div> Text </div>
-        <div> Text </div>
+      </div>
     </div>
 
 
