Update: queue class and responsiveness

--- a/css/test.html
+++ b/css/test.html
@@ -6,14 +6,19 @@
   <link rel="stylesheet" href="./master.css">
 </head>
 <body>
-  <div class="stack">
-    <div class="queue"></div>
-    <div class="board">
-      <div class="col-4 col-m-8">Hello</div>
-      <div class="col-4">Hello</div>
-      <div class="col-4 col-l-12">Hello</div>
-    </div>
-    <div class="queue"></div>
-  </div>
+  <main>
+    <header>
+      <nav class="board between">
+        <div class="col-12 col-l-6 board between">
+          <div class='col-3 queue center'>Btn</div>
+          <div class='col-3 queue center'>Btn</div>
+          <div class='col-3 queue center'>Btn</div>
+        </div>
+        <div class="col-12 col-l-6">
+          <div class="logo">Logo</div>
+        </div>
+      </nav>
+    </header>
+  </main>
 </body>
 </html>
